--- a/GW2-Win10/GW2-Win10.csproj
+++ b/GW2-Win10/GW2-Win10.csproj
@@ -128,9 +128,6 @@
     <Compile Include="Pages\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Pages\AccountSettings.xaml.cs">
-      <DependentUpon>AccountSettings.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Pages\Bank.xaml.cs">
       <DependentUpon>Bank.xaml</DependentUpon>
     </Compile>
@@ -143,8 +140,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AccountService.cs" />
     <Compile Include="Services\SettingsService.cs" />
-    <Compile Include="ViewModels\AccountSettingsPageViewModel.cs" />
     <Compile Include="ViewModels\CharactersPageViewModel.cs" />
+    <Compile Include="ViewModels\SettingsPageViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -183,10 +180,6 @@
     <Page Include="Pages\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Pages\AccountSettings.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\Bank.xaml">
       <SubType>Designer</SubType>
