--- a/GW2-Win10/GW2-Win10.csproj
+++ b/GW2-Win10/GW2-Win10.csproj
@@ -108,6 +108,7 @@
     <Compile Include="API\CraftingSkill.cs" />
     <Compile Include="API\EquipmentItem.cs" />
     <Compile Include="API\IApiType.cs" />
+    <Compile Include="API\Item.cs" />
     <Compile Include="API\JsonContent.cs" />
     <Compile Include="API\Session.cs" />
     <Compile Include="API\Specialization.cs" />
@@ -119,6 +120,13 @@
     </Compile>
     <Compile Include="AppState.cs" />
     <Compile Include="Converters\BooleanToVisibilityConverter.cs" />
+    <Compile Include="Converters\AsyncResourceConverter.cs" />
+    <Compile Include="Converters\NotNullToVisibilityConverter.cs" />
+    <Compile Include="Helpers\AsyncViewValue.cs" />
+    <Compile Include="Helpers\RwLock.cs" />
+    <Compile Include="Pages\CharacterPage.xaml.cs">
+      <DependentUpon>CharacterPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\CharactersPage.xaml.cs">
       <DependentUpon>CharactersPage.xaml</DependentUpon>
     </Compile>
@@ -134,8 +142,10 @@
     <Compile Include="Pages\Settings.xaml.cs">
       <DependentUpon>Settings.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\SettingsService.cs" />
+    <Compile Include="State\ResourceCache.cs" />
     <Compile Include="ViewModels\CharactersPageViewModel.cs" />
     <Compile Include="ViewModels\HomePageViewModel.cs" />
     <Compile Include="ViewModels\SettingsPageViewModel.cs" />
@@ -163,6 +173,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="AppShell.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\CharacterPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
